<resources>
    <string name="app_name">My Notes</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="title_activity_note_details">Note Details</string>

    <string name="title_activity_add_note">Add Note</string>

    <string name="notlarim">Back To Notes</string>
    <string name="onay">By using this app, you accept the Privacy Policy</string>
    <string name="sozlesme">Privacy Policy and Terms of Service</string>
    <string name="sozlesme_detaylari">DKS Apps and MoodyNotes are not responsible for errors that may occur by the user or application for the Moody Notes application published by DKS Apps. We are absolutely not responsible for your notes being deleted, lost or attacked by third parties as a result of an attack on our Google Firebase supported database. It is strictly a crime to use the vulnerabilities that may be found in the application, not to inform us and to share them outside. This Privacy Agreement may be modified. Any changes to the Confidentiality Agreement will be posted on the site. All information sent to the user through the site is subject to the terms and conditions of the Confidentiality Agreement, as amended. Anyone using this application (MoodyNotes) is deemed to have accepted the articles in the Confidentiality Agreement.</string>
    <string name="navbar_clear">Sign Out</string>
    <string name="navbar_clear_Title">Session</string>
    <string name="navbar_share">Share MoodyNotes</string>
    <string name="navbar_rate_us">Rate Us</string>
    <string name="navbar_support">Support</string>
    <string name="navbar_synchronize">Login</string>
    <string name="navbar_add_note">Add Note</string>
    <string name="navbar_my_notes">My Notes</string>
    <string name="navbar_general_title">General</string>
    <string name="splashscreen_description">New Notebook Experience</string>
    <string name="moody_notes">Moody Notes</string>
    <string name="register_name_surname">Name (First and Last)</string>
    <string name="register_email">E-Mail</string>
    <string name="register_password">Password</string>
    <string name="register_pass_confirmation">Confirm Your Password</string>
    <string name="register_register">Register</string>
    <string name="register_already_user">Already A Member: Login</string>
    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgot_password">Forgot Your Password?</string>
    <string name="login_create_new_acc">New Here? Create New Account</string>
    <string name="addnote_unnamed_note">Unnamed Note</string>
    <string name="addnote_start_writing">Start writing…</string>
    <string name="navbarheader_email">You are not logged in</string>
    <string name="navbarheader_description">A Brand New Notebook Experience</string>
    <string name="navbarheader_name">DKS Apps</string>
    <string name="options_refresh">Refresh</string>
    <string name="note_updated">Note updated!</string>
    <string name="error_try_again">Error, please try again!</string>
    <string name="error_note_title">You cannot save a new note without entering a note or title!</string>
    <string name="note_added">Note added!</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="note_not_deleted">The note could not be deleted!</string>
    <string name="already_sync">You are connected to the system, your notes are automatically synchronized.</string>
    <string name="areyousure">Are you sure?</string>
    <string name="logout_alert">You are using anonymous account, all your notes will be deleted when you log out!</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
    <string name="notes_sync_successfully">Notes are synced.</string>
    <string name="note_not_sync_alert">Your notes will not be linked to an account.</string>
    <string name="error">Error!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="connect_new_account">Connecting to another account, all saved notes will be deleted. Create a new account to register them.</string>
    <string name="login_unsuccessful">Login failed!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_anon_acc_deleted">Anonymous user account has been deleted.</string>
    <string name="login_anon_notes_deleted">Anonymous notes have been cleared.</string>
    <string name="login_empty_field">These fields cannot be empty!</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="register_empty_field">It is mandatory to fill all the fields!</string>
    <string name="register_pass_doesnot_match">Passwords do not match!</string>
    <string name="register_successful">You have successfully registered.</string>
    <string name="register_connection_alert">Connection could not be established. Try again.</string>
    <string name="forgotpassword_send_my_password">Send My Password</string>
    <string name="forgetpass_reset_my_pass">Forgot Password</string>
    <string name="forgotpass_password_send_to_your_mail">Your password has been sent to your email address!</string>
    <string name="shareapp_message">I suggest you a great application: Moody Notes, a brand new note experience! Don\'t lose your notes with Moody Notes, check, create, update from all your Android devices!</string>
    <string name="shareapp_choose_one">Choose one</string>
    <string name="privacyPolicyNotify">By clicking the Register button, you declare that you accept the Privacy Policy.</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="closingAppAlert">Do you want to close the app?</string>
    <string name="No">No</string>
    <string name="updates_cancelled">Changes canceled!</string>
    <string name="alert_email_spam">Password reset link has been sent via e-mail. Please check your e-mail spam folder.</string>
    <string name="info">Information</string>
    <string name="note_delete_message">Do you want to delete this note?</string>
    <string name="cancel">Cancel</string>

</resources>
